--- a/frontend/pointofsales/package.json
+++ b/frontend/pointofsales/package.json
@@ -16,13 +16,17 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@hookform/resolvers": "^3.10.0",
     "@reduxjs/toolkit": "^2.5.1",
+    "axios": "^1.7.9",
     "bson-objectid": "^2.0.4",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-redux": "^9.2.0",
+    "react-spinners": "^0.15.0",
+    "react-toastify": "^11.0.3",
     "sweetalert2": "^11.15.10",
+    "swr": "^2.3.0",
     "uuid": "^11.0.5",
     "yup": "^1.6.1"
   },
