make db configs dynamic

--- a/backend/pointofsales/src/main/resources/application.properties
+++ b/backend/pointofsales/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=pointofsales
 server.port=8080
 
 # Database Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/final-pos
-spring.datasource.username=postgres
-spring.datasource.password=mypassword
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA Configuration
