make docker to build jar file first

--- a/backend/pointofsales/Dockerfile
+++ b/backend/pointofsales/Dockerfile
@@ -1,8 +1,16 @@
+FROM eclipse-temurin:21-jdk-alpine AS build
+
+WORKDIR /app
+
+COPY ./backend/pointofsales .
+
+RUN ./mvnw clean package -DskipTests
+
 FROM eclipse-temurin:21-jdk-alpine
 
 WORKDIR /app
 
-COPY target/pointofsales-0.0.1-SNAPSHOT.jar app.jar
+COPY --from=build /app/target/pointofsales-0.0.1-SNAPSHOT.jar app.jar
 
 EXPOSE 8080
 
