fixing the folder to be copied

--- a/backend/pointofsales/Dockerfile
+++ b/backend/pointofsales/Dockerfile
@@ -2,7 +2,7 @@ FROM eclipse-temurin:21-jdk-alpine AS build
 
 WORKDIR /app
 
-COPY ./backend/pointofsales .
+COPY . .
 
 RUN ./mvnw clean package -DskipTests
 
